; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dpp.c_dpp_configurator_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dpp.c_dpp_configurator_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dpp_configurator = type { %struct.dpp_configurator*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dpp_configurator_free(%struct.dpp_configurator* %0) #0 {
  %2 = alloca %struct.dpp_configurator*, align 8
  store %struct.dpp_configurator* %0, %struct.dpp_configurator** %2, align 8
  %3 = load %struct.dpp_configurator*, %struct.dpp_configurator** %2, align 8
  %4 = icmp ne %struct.dpp_configurator* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %17

6:                                                ; preds = %1
  %7 = load %struct.dpp_configurator*, %struct.dpp_configurator** %2, align 8
  %8 = getelementptr inbounds %struct.dpp_configurator, %struct.dpp_configurator* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @EVP_PKEY_free(i32 %9)
  %11 = load %struct.dpp_configurator*, %struct.dpp_configurator** %2, align 8
  %12 = getelementptr inbounds %struct.dpp_configurator, %struct.dpp_configurator* %11, i32 0, i32 0
  %13 = load %struct.dpp_configurator*, %struct.dpp_configurator** %12, align 8
  %14 = call i32 @os_free(%struct.dpp_configurator* %13)
  %15 = load %struct.dpp_configurator*, %struct.dpp_configurator** %2, align 8
  %16 = call i32 @os_free(%struct.dpp_configurator* %15)
  br label %17

17:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @EVP_PKEY_free(i32) #1

declare dso_local i32 @os_free(%struct.dpp_configurator*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
